Fix footer height on mobile

--- a/cypherpunk-com/src/app/components/footer/footer.component.scss
+++ b/cypherpunk-com/src/app/components/footer/footer.component.scss
@@ -167,3 +167,7 @@
   .safari-column-fix { display: block; }
   .footerContainer .footer { height: 941px; }
 }
+
+@media (max-width: 445px) {
+  .footerContainer .footer { height: 1367px; }
+}
